[package]
name = "minxent"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
impl-trait-for-tuples = "0.2.2"
cxx = "1.0"
autocxx = "0.22.4"


[build-dependencies]
autocxx-build = "0.22.4"
miette = { version="4.3", features=["fancy"] } # optional but gives nicer error messages!
